fixed minor UI bug where seperator was invisible

--- a/styles/_defaults.scss
+++ b/styles/_defaults.scss
@@ -19,3 +19,4 @@ button {
 
 $sm-radius: 8px;
 $lg-radius: 50%;
+$breakpoint-tablet: 768px;
